[E-2567] Rename UStb to USDtb

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ustb-minting-client",
+  "name": "usdtb-minting-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
