--- a/ui/package.json
+++ b/ui/package.json
@@ -40,5 +40,30 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "ansi-regex@6.2.1": ">=6.2.2",
+    "ansi-styles@6.2.2": ">=6.2.3",
+    "axios@>=1.0.0 <1.8.2": ">=1.8.2",
+    "chalk@5.6.1": ">=5.6.2",
+    "color-convert@3.1.1": ">=3.1.2",
+    "color-name@2.0.1": ">=2.0.2",
+    "color-string@2.1.1": ">=2.1.2",
+    "elliptic": "^6.6.1",
+    "error-ex@1.3.3": "1.3.2",
+    "esbuild": "0.25.0",
+    "form-data@>=4.0.0 <4.0.4": ">=4.0.4",
+    "is-arrayish@0.3.3": "0.3.2",
+    "path-to-regexp": "8.2.0",
+    "pbkdf2@>=3.0.10 <=3.1.2": ">=3.1.3",
+    "pbkdf2@<=3.1.2": ">=3.1.3",
+    "react-is": "19.0.0",
+    "simple-swizzle@0.2.3": "0.2.2",
+    "slice-ansi@7.1.1": ">=7.1.2",
+    "strip-ansi@7.1.1": ">=7.1.2",
+    "undici": "5.28.5",
+    "undici@<5.29.0": ">=5.29.0",
+    "wrap-ansi@9.0.1": ">=9.0.2",
+    "ws": "^8.14.2"
   }
 }
